--- a/dendron.yml
+++ b/dendron.yml
@@ -23,6 +23,10 @@ commands:
 workspace:
     vaults:
         -
+            fsPath: dependencies/localhost/test-tast
+            selfContained: true
+            name: test-tast
+        -
             fsPath: .
             selfContained: true
             name: temp2
@@ -106,3 +110,8 @@ publishing:
     enableTaskNotes: true
     enablePrettyLinks: true
     searchMode: search
+    duplicateNoteBehavior:
+        action: useVault
+        payload:
+            - test-tast
+            - temp2
